[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersecurity-threat-hunter"
version = "1.0.0"
description = "Network security telemetry anomaly detector using Isolation Forest models to flag network threats."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
